--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "react-scripts": "0.7.0"
   },
   "dependencies": {
+    "d3": "^3.5.17",
     "install": "^0.8.2",
     "isomorphic-fetch": "^2.2.1",
     "moment": "^2.15.2",
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.6",
     "react-bootstrap-daterangepicker": "^3.2.2",
+    "react-bubble-chart": "^0.4.0",
     "react-dom": "^15.3.2",
     "react-google-maps": "^6.0.1",
     "react-redux": "^4.4.6",
