--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "react-bootstrap-daterangepicker": "^3.2.2",
     "react-bubble-chart": "^0.4.0",
     "react-dom": "^15.3.2",
+    "react-google-charts": "^1.2.1",
     "react-google-maps": "^6.0.1",
-    "react-pie": "0.0.3",
     "react-redux": "^4.4.6",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
