--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.6",
     "react-bootstrap-daterangepicker": "^3.2.2",
+    "react-bootstrap-slider": "^1.1.3",
     "react-bubble-chart": "^0.4.0",
     "react-dom": "^15.3.2",
     "react-google-charts": "^1.2.1",
